Did a lot of cleanup

--- a/data/config/Crosshairs.ini
+++ b/data/config/Crosshairs.ini
@@ -7,7 +7,7 @@ LifeTime = 10.0
 ;User-Defined
 Pos = (0, 0)
 Depth = O-Crosshairs
-Speed = 400
+FSpeed = 400
 DecelerationDistance = 20.0
 MaxMissileSpawnInterval = 1.0
 
