--- a/data/config/Hexpatriates.ini
+++ b/data/config/Hexpatriates.ini
@@ -140,6 +140,8 @@ CalculateSuperInput = % > @, > Get < PlayerType, > Get GenericInput Super, Retur
 	O-Ship = 0
 ;PILOT #
 	O-Pilot = 0
+	O-NoDashIcon = -1
+	O-NoParryIcon = -1
 ;PROJECTILETETHERED #
 	O-Beam = 1
 	O-Puppet = 0
