--- a/data/config/Pilot.ini
+++ b/data/config/Pilot.ini
@@ -18,7 +18,6 @@ DashInput = @Commands.CalculateDashInput
 ParryInput = @Commands.CalculateParryInput
 MaxIFrames = 1.0 ; Ensure that this value is equal to @TT-IFramesFlash duration / 60.
 IFrameFlashInterval = 0.1
-DashIconInterval = 0.00000001
 
 [G-Pilot]
 Pivot = center
@@ -90,14 +89,11 @@ JumpDuration = 0.45
 DashDuration = 0.1
 ParryDuration = 0.8
 MeleeDuration = 0.5
-MaxDashes = 3
+MaxDashes = 1
 MaxLives = 3
 MaxCooldownDash = 2.0
 MaxCooldownParry = 1.0
 MaxCooldownMelee = 1.0
-ClipSizeNeutral = 10
-ClipSizeUpward = 1
-ClipSizeDownward = 1
 WaveSizeNeutral = 1
 WaveSizeUpward = 1
 WaveSizeDownward = 6
@@ -126,14 +122,13 @@ TextureSize = (32, 32, 0)
 Body = B-Pilot1P1
 Position = @O-PilotP1
 ShaderList = @O-PilotP1
-ChildList = O-Ship1P1 # O-HeadsUpText # O-Melee # O-Parry
-ChildJointList = J-Weld
+ChildList = O-Ship1P1 # O-HeadsUpText # O-Melee # O-Parry # O-NoDashIcon # O-NoParryIcon
 ;User-Defined
 Pos = @O-PilotP1
 PlayerType = @O-PilotP1
 
 [B-Pilot1P1@B-Pilot]
-PartList = BP-PilotP1 # BP-Melee1P1
+PartList = BP-PilotP1 # BP-Ship1 # BP-Melee1P1
 
 [BP-Melee1P1@BP-Melee]
 TopLeft = (0, -16, 0)
@@ -148,14 +143,13 @@ Body = B-Pilot1P2
 Position = @O-PilotP2
 Flip = @O-PilotP2
 ShaderList = @O-PilotP2
-ChildList = O-Ship1P2 # O-HeadsUpText # O-Melee # O-Parry
-ChildJointList = J-Weld
+ChildList = O-Ship1P2 # O-HeadsUpText # O-Melee # O-Parry # O-NoDashIcon # O-NoParryIcon
 ;User-Defined
 Pos = @O-PilotP2
 PlayerType = @O-PilotP2
 
 [B-Pilot1P2@B-Pilot]
-PartList = BP-PilotP2 # BP-Melee1P2
+PartList = BP-PilotP2 # BP-Ship1 # BP-Melee1P2
 
 [BP-Melee1P2@BP-Melee]
 TopLeft = (-16, -16, 0)
@@ -176,14 +170,11 @@ JumpDuration = 0.45
 DashDuration = 0.1
 ParryDuration = 0.8
 MeleeDuration = 0.5
-MaxDashes = 3
+MaxDashes = 1
 MaxLives = 3
 MaxCooldownDash = 2.0
 MaxCooldownParry = 1.0
 MaxCooldownMelee = 1.0
-ClipSizeNeutral = 3
-ClipSizeUpward = 1
-ClipSizeDownward = 3
 WaveSizeNeutral = 1
 WaveSizeUpward = 1
 WaveSizeDownward = 3
@@ -212,14 +203,13 @@ TextureSize = (32, 32, 0)
 Body = B-Pilot2P1
 Position = @O-PilotP1
 ShaderList = @O-PilotP1
-ChildList = O-Ship2P1 # O-HeadsUpText # O-Melee # O-Parry
-ChildJointList = J-Weld
+ChildList = O-Ship2P1 # O-HeadsUpText # O-Melee # O-Parry # O-NoDashIcon # O-NoParryIcon
 ;User-Defined
 Pos = @O-PilotP1
 PlayerType = @O-PilotP1
 
 [B-Pilot2P1@B-Pilot]
-PartList = BP-PilotP1 # BP-Melee2P1
+PartList = BP-PilotP1 # BP-Ship2 # BP-Melee2P1
 
 [BP-Melee2P1@BP-Melee]
 TopLeft = (0, -16, 0)
@@ -234,14 +224,13 @@ Body = B-Pilot2P2
 Position = @O-PilotP2
 Flip = @O-PilotP2
 ShaderList = @O-PilotP2
-ChildList = O-Ship2P2 # O-HeadsUpText # O-Melee # O-Parry
-ChildJointList = J-Weld
+ChildList = O-Ship2P2 # O-HeadsUpText # O-Melee # O-Parry # O-NoDashIcon # O-NoParryIcon
 ;User-Defined
 Pos = @O-PilotP2
 PlayerType = @O-PilotP2
 
 [B-Pilot2P2@B-Pilot]
-PartList = BP-PilotP2 # BP-Melee2P2
+PartList = BP-PilotP2 # BP-Ship2 # BP-Melee2P2
 
 [BP-Melee2P2@BP-Melee]
 TopLeft = (-16, -16, 0)
@@ -262,14 +251,11 @@ JumpDuration = 0.45
 DashDuration = 0.1
 ParryDuration = 0.8
 MeleeDuration = 0.5
-MaxDashes = 3
+MaxDashes = 1
 MaxLives = 3
 MaxCooldownDash = 2.0
 MaxCooldownParry = 1.0
 MaxCooldownMelee = 1.0
-ClipSizeNeutral = 3
-ClipSizeUpward = 1
-ClipSizeDownward = 1
 WaveSizeNeutral = 1
 WaveSizeUpward = 3
 WaveSizeDownward = 1
@@ -298,14 +284,13 @@ TextureSize = (32, 32, 0)
 Body = B-Pilot3P1
 Position = @O-PilotP1
 ShaderList = @O-PilotP1
-ChildList = O-Ship3P1 # O-HeadsUpText # O-Melee # O-Parry
-ChildJointList = J-Weld
+ChildList = O-Ship3P1 # O-HeadsUpText # O-Melee # O-Parry # O-NoDashIcon # O-NoParryIcon
 ;User-Defined
 Pos = @O-PilotP1
 PlayerType = @O-PilotP1
 
 [B-Pilot3P1@B-Pilot]
-PartList = BP-PilotP1 # BP-Melee3P1
+PartList = BP-PilotP1 # BP-Ship3 # BP-Melee3P1
 
 [BP-Melee3P1@BP-Melee]
 TopLeft = (0, -16, 0)
@@ -320,14 +305,13 @@ Body = B-Pilot3P2
 Position = @O-PilotP2
 Flip = @O-PilotP2
 ShaderList = @O-PilotP2
-ChildList = O-Ship3P2 # O-HeadsUpText # O-Melee # O-Parry
-ChildJointList = J-Weld
+ChildList = O-Ship3P2 # O-HeadsUpText # O-Melee # O-Parry # O-NoDashIcon # O-NoParryIcon
 ;User-Defined
 Pos = @O-PilotP2
 PlayerType = @O-PilotP2
 
 [B-Pilot3P2@B-Pilot]
-PartList = BP-PilotP2 # BP-Melee3P2
+PartList = BP-PilotP2 # BP-Ship3 # BP-Melee3P2
 
 [BP-Melee3P2@BP-Melee]
 TopLeft = (-16, -16, 0)
@@ -348,14 +332,11 @@ JumpDuration = 0.45
 DashDuration = 0.1
 ParryDuration = 0.8
 MeleeDuration = 0.5
-MaxDashes = 2
+MaxDashes = 1
 MaxLives = 3
 MaxCooldownDash = 2.0
 MaxCooldownParry = 1.0
 MaxCooldownMelee = 1.0
-ClipSizeNeutral = 2
-ClipSizeUpward = 1
-ClipSizeDownward = 1
 WaveSizeNeutral = 3
 WaveSizeUpward = 1
 WaveSizeDownward = 3
@@ -384,14 +365,13 @@ TextureSize = (32, 32, 0)
 Body = B-Pilot4P1
 Position = @O-PilotP1
 ShaderList = @O-PilotP1
-ChildList = O-Ship4P1 # O-HeadsUpText # O-Melee # O-Parry
-ChildJointList = J-Weld
+ChildList = O-Ship4P1 # O-HeadsUpText # O-Melee # O-Parry # O-NoDashIcon # O-NoParryIcon
 ;User-Defined
 Pos = @O-PilotP1
 PlayerType = @O-PilotP1
 
 [B-Pilot4P1@B-Pilot]
-PartList = BP-PilotP1 # BP-Melee4P1
+PartList = BP-PilotP1 # BP-Ship4 # BP-Melee4P1
 
 [BP-Melee4P1@BP-Melee]
 TopLeft = (0, -16, 0)
@@ -406,14 +386,13 @@ Body = B-Pilot4P2
 Position = @O-PilotP2
 Flip = @O-PilotP2
 ShaderList = @O-PilotP2
-ChildList = O-Ship4P2 # O-HeadsUpText # O-Melee # O-Parry
-ChildJointList = J-Weld
+ChildList = O-Ship4P2 # O-HeadsUpText # O-Melee # O-Parry # O-NoDashIcon # O-NoParryIcon
 ;User-Defined
 Pos = @O-PilotP2
 PlayerType = @O-PilotP2
 
 [B-Pilot4P2@B-Pilot]
-PartList = BP-PilotP2 # BP-Melee4P2
+PartList = BP-PilotP2 # BP-Ship4 # BP-Melee4P2
 
 [BP-Melee4P2@BP-Melee]
 TopLeft = (-16, -16, 0)
@@ -434,14 +413,11 @@ JumpDuration = 0.45
 DashDuration = 0.1
 ParryDuration = 0.8
 MeleeDuration = 0.5
-MaxDashes = 2
+MaxDashes = 1
 MaxLives = 3
 MaxCooldownDash = 2.0
 MaxCooldownParry = 1.0
 MaxCooldownMelee = 1.0
-ClipSizeNeutral = 1
-ClipSizeUpward = 1
-ClipSizeDownward = 1
 WaveSizeNeutral = 1
 WaveSizeUpward = 3
 WaveSizeDownward = 1
@@ -471,14 +447,13 @@ TextureSize = (32, 32, 0)
 Body = B-Pilot5P1
 Position = @O-PilotP1
 ShaderList = @O-PilotP1
-ChildList = O-Ship5P1 # O-HeadsUpText # O-Melee # O-Parry
-ChildJointList = J-Weld
+ChildList = O-Ship5P1 # O-HeadsUpText # O-Melee # O-Parry # O-NoDashIcon # O-NoParryIcon
 ;User-Defined
 Pos = @O-PilotP1
 PlayerType = @O-PilotP1
 
 [B-Pilot5P1@B-Pilot]
-PartList = BP-PilotP1 # BP-Melee5P1
+PartList = BP-PilotP1 # BP-Ship5 # BP-Melee5P1
 
 [BP-Melee5P1@BP-Melee]
 TopLeft = (0, -16, 0)
@@ -493,14 +468,13 @@ Body = B-Pilot5P2
 Position = @O-PilotP2
 Flip = @O-PilotP2
 ShaderList = @O-PilotP2
-ChildList = O-Ship5P2 # O-HeadsUpText # O-Melee # O-Parry
-ChildJointList = J-Weld
+ChildList = O-Ship5P2 # O-HeadsUpText # O-Melee # O-Parry # O-NoDashIcon # O-NoParryIcon
 ;User-Defined
 Pos = @O-PilotP2
 PlayerType = @O-PilotP2
 
 [B-Pilot5P2@B-Pilot]
-PartList = BP-PilotP2 # BP-Melee5P2
+PartList = BP-PilotP2 # BP-Ship5 # BP-Melee5P2
 
 [BP-Melee5P2@BP-Melee]
 TopLeft = (-16, -16, 0)
@@ -521,14 +495,11 @@ JumpDuration = 0.45
 DashDuration = 0.1
 ParryDuration = 0.8
 MeleeDuration = 0.5
-MaxDashes = 3
+MaxDashes = 1
 MaxLives = 3
 MaxCooldownDash = 2.0
 MaxCooldownParry = 1.0
 MaxCooldownMelee = 1.0
-ClipSizeNeutral = 3
-ClipSizeUpward = 3
-ClipSizeDownward = 3
 WaveSizeNeutral = 1
 WaveSizeUpward = 1
 WaveSizeDownward = 1
@@ -558,14 +529,13 @@ TextureSize = (32, 32, 0)
 Body = B-Pilot6P1
 Position = @O-PilotP1
 ShaderList = @O-PilotP1
-ChildList = O-Ship6P1 # O-HeadsUpText # O-Melee # O-Parry
-ChildJointList = J-Weld
+ChildList = O-Ship6P1 # O-HeadsUpText # O-Melee # O-Parry # O-NoDashIcon # O-NoParryIcon
 ;User-Defined
 Pos = @O-PilotP1
 PlayerType = @O-PilotP1
 
 [B-Pilot6P1@B-Pilot]
-PartList = BP-PilotP1 # BP-Melee6P1
+PartList = BP-PilotP1 # BP-Ship6 # BP-Melee6P1
 
 [BP-Melee6P1@BP-Melee]
 TopLeft = (0, -16, 0)
@@ -580,14 +550,13 @@ Body = B-Pilot6P2
 Position = @O-PilotP2
 Flip = @O-PilotP2
 ShaderList = @O-PilotP2
-ChildList = O-Ship6P2 # O-HeadsUpText # O-Melee # O-Parry
-ChildJointList = J-Weld
+ChildList = O-Ship6P2 # O-HeadsUpText # O-Melee # O-Parry # O-NoDashIcon # O-NoParryIcon
 ;User-Defined
 Pos = @O-PilotP2
 PlayerType = @O-PilotP2
 
 [B-Pilot6P2@B-Pilot]
-PartList = BP-PilotP2 # BP-Melee6P2
+PartList = BP-PilotP2 # BP-Ship6 # BP-Melee6P2
 
 [BP-Melee6P2@BP-Melee]
 TopLeft = (-16, -16, 0)
@@ -608,14 +577,11 @@ JumpDuration = 0.45
 DashDuration = 0.1
 ParryDuration = 0.8
 MeleeDuration = 0.5
-MaxDashes = 3
+MaxDashes = 1
 MaxLives = 3
 MaxCooldownDash = 2.0
 MaxCooldownParry = 1.0
 MaxCooldownMelee = 1.0
-ClipSizeNeutral = 5
-ClipSizeUpward = 2
-ClipSizeDownward = 1
 WaveSizeNeutral = 1
 WaveSizeUpward = 3
 WaveSizeDownward = 1
@@ -644,14 +610,13 @@ TextureSize = (32, 32, 0)
 Body = B-Pilot7P1
 Position = @O-PilotP1
 ShaderList = @O-PilotP1
-ChildList = O-Ship7P1 # O-HeadsUpText # O-Melee # O-Parry
-ChildJointList = J-Weld
+ChildList = O-Ship7P1 # O-HeadsUpText # O-Melee # O-Parry # O-NoDashIcon # O-NoParryIcon
 ;User-Defined
 Pos = @O-PilotP1
 PlayerType = @O-PilotP1
 
 [B-Pilot7P1@B-Pilot]
-PartList = BP-PilotP1 # BP-Melee7P1
+PartList = BP-PilotP1 # BP-Ship7 # BP-Melee7P1
 
 [BP-Melee7P1@BP-Melee]
 TopLeft = (0, -16, 0)
@@ -666,14 +631,13 @@ Body = B-Pilot7P2
 Position = @O-PilotP2
 Flip = @O-PilotP2
 ShaderList = @O-PilotP2
-ChildList = O-Ship7P2 # O-HeadsUpText # O-Melee # O-Parry
-ChildJointList = J-Weld
+ChildList = O-Ship7P2 # O-HeadsUpText # O-Melee # O-Parry # O-NoDashIcon # O-NoParryIcon
 ;User-Defined
 Pos = @O-PilotP2
 PlayerType = @O-PilotP2
 
 [B-Pilot7P2@B-Pilot]
-PartList = BP-PilotP2 # BP-Melee7P2
+PartList = BP-PilotP2 # BP-Ship7 # BP-Melee7P2
 
 [BP-Melee7P2@BP-Melee]
 TopLeft = (-16, -16, 0)
@@ -699,9 +663,6 @@ MaxLives = 3
 MaxCooldownDash = 2.0
 MaxCooldownParry = 1.0
 MaxCooldownMelee = 1.0
-ClipSizeNeutral = 1
-ClipSizeUpward = 1
-ClipSizeDownward = 2
 WaveSizeNeutral = 1
 WaveSizeUpward = 1
 WaveSizeDownward = 1
@@ -730,14 +691,13 @@ TextureSize = (32, 32, 0)
 Body = B-Pilot8P1
 Position = @O-PilotP1
 ShaderList = @O-PilotP1
-ChildList = O-Ship8P1 # O-HeadsUpText # O-Melee # O-Parry
-ChildJointList = J-Weld
+ChildList = O-Ship8P1 # O-HeadsUpText # O-Melee # O-Parry # O-NoDashIcon # O-NoParryIcon
 ;User-Defined
 Pos = @O-PilotP1
 PlayerType = @O-PilotP1
 
 [B-Pilot8P1@B-Pilot]
-PartList = BP-PilotP1 # BP-Melee8P1
+PartList = BP-PilotP1 # BP-Ship8 # BP-Melee8P1
 
 [BP-Melee8P1@BP-Melee]
 TopLeft = (0, -16, 0)
@@ -752,14 +712,13 @@ Body = B-Pilot8P2
 Position = @O-PilotP2
 Flip = @O-PilotP2
 ShaderList = @O-PilotP2
-ChildList = O-Ship8P2 # O-HeadsUpText # O-Melee # O-Parry
-ChildJointList = J-Weld
+ChildList = O-Ship8P2 # O-HeadsUpText # O-Melee # O-Parry # O-NoDashIcon # O-NoParryIcon
 ;User-Defined
 Pos = @O-PilotP2
 PlayerType = @O-PilotP2
 
 [B-Pilot8P2@B-Pilot]
-PartList = BP-PilotP2 # BP-Melee8P2
+PartList = BP-PilotP2 # BP-Ship8 # BP-Melee8P2
 
 [BP-Melee8P2@BP-Melee]
 TopLeft = (-16, -16, 0)
