--- a/data/config/Projectile.ini
+++ b/data/config/Projectile.ini
@@ -27,7 +27,7 @@ Position = @Commands.CalculatePosition
 ;User-Defined
 Pos = (0, 0)
 Depth = O-Laser
-Speed = 1000
+FSpeed = 1000
 
 [BP-Laser@BP-Projectile]
 Type = box
@@ -68,7 +68,7 @@ CheckMask = geometry # space # pilotP1 # projectileP2
 
 [O-LaserGateLaserNearP1@O-LaserP1]
 Scale = (1.0, 2.0)
-Speed = 0.0
+FSpeed = 0.0
 Pivot = bottom
 LifeTime = @O-LaserGate
 
@@ -76,7 +76,7 @@ LifeTime = @O-LaserGate
 
 [O-LaserGateLaserFarP1@O-LaserP1]
 Scale = (1.0, 2.0)
-Speed = 0.0
+FSpeed = 0.0
 Pivot = top
 LifeTime = @O-LaserGate
 
@@ -84,7 +84,7 @@ LifeTime = @O-LaserGate
 
 [O-LaserGateLaserNearP2@O-LaserP2]
 Scale = (1.0, 2.0)
-Speed = 0.0
+FSpeed = 0.0
 Pivot = bottom
 LifeTime = @O-LaserGate
 
@@ -92,7 +92,7 @@ LifeTime = @O-LaserGate
 
 [O-LaserGateLaserFarP2@O-LaserP2]
 Scale = (1.0, 2.0)
-Speed = 0.0
+FSpeed = 0.0
 Pivot = top
 LifeTime = @O-LaserGate
 
@@ -143,7 +143,7 @@ Position = @Commands.CalculatePosition
 ;User-Defined
 Pos = (0, 0)
 Depth = O-LaserHeatseeking
-Speed = 1000
+FSpeed = 1000
 
 [BP-LaserHeatseeking@BP-Projectile]
 Type = box
@@ -189,7 +189,7 @@ Rotation = 90.0
 ;User-Defined
 Pos = (0, 0)
 Depth = O-LaserWall
-Speed = 450
+FSpeed = 450
 GrowthSpeed = 1
 
 [BP-LaserWall@BP-Projectile]
@@ -236,7 +236,7 @@ Scale = (0.5, 0.5, 1.0)
 ;User-Defined
 Pos = (0, 0)
 Depth = O-LaserGate
-Speed = 600.0
+FSpeed = 600.0
 OpeningSize = 50.0
 LaserExpansionSpeed = 1.5
 
@@ -284,7 +284,7 @@ Scale = (0.5, 0.5, 0.5)
 ;User-Defined
 Pos = (0, 0)
 Depth = O-Orb
-Speed = 600
+FSpeed = 600
 IsBouncy = true
 
 [BP-Orb@BP-Projectile]
@@ -334,7 +334,7 @@ FXList = FX-RotateQuad
 ;User-Defined
 Pos = (0, 0)
 Depth = O-MedussaHead
-Speed = 600
+FSpeed = 600
 SwaySpeed = 50
 MaxSwayTime = 1.5
 
@@ -384,7 +384,7 @@ LifeTime = 10.0
 ;User-Defined
 Pos = (0, 0)
 Depth = O-Missile
-Speed = 1000
+FSpeed = 1000
 FiringDirection = (0, 0)
 
 [B-Missile@B-Projectile]
@@ -435,7 +435,7 @@ FXList = FX-Rotate
 ;User-Defined
 Pos = (0, 0)
 Depth = O-Grenade
-Speed = 750
+FSpeed = 750
 NumShrapnel = 3
 
 [B-Grenade@B-Projectile]
@@ -487,7 +487,7 @@ Scale = (0.5, 0.5, 1.0)
 ;User-Defined
 Pos = (0, 0)
 Depth = O-Turret
-Speed = 800
+FSpeed = 800
 
 [BP-Turret@BP-Projectile]
 Type = box
@@ -537,7 +537,7 @@ FXList = FX-Rotate
 ;User-Defined
 Pos = (0, 0)
 Depth = O-Prism
-Speed = 300
+FSpeed = 300
 IsBouncy = true
 RotationSpeed = 2
 WaveSize = 5
@@ -592,7 +592,7 @@ FXList = FX-Rotate
 ;User-Defined
 Pos = (0, 0)
 Depth = O-Spacer
-Speed = 200
+FSpeed = 200
 IsBouncy = true
 RotationSpeed = 1.5
 
@@ -645,7 +645,7 @@ LifeTime = 0.5
 Pos = (0, 0)
 Depth = O-Beam
 Tethered = true
-Speed = 0
+FSpeed = 0
 
 [G-Beam@G-Projectile]
 Pivot = bottom
@@ -699,7 +699,7 @@ LifeTime = -1.0
 ;User-Defined
 Pos = (0, 0)
 Depth = O-Familiar
-Speed = 800
+FSpeed = 800
 FramesBehind = 10 ; The number of movement frames behind which the Familiar lags its associated ship.
 
 [BP-Familiar@BP-Projectile]
@@ -751,7 +751,7 @@ LifeTime = 0.5
 ;User-Defined
 Pos = (0, 0)
 Depth = O-Puppet
-Speed = 0
+FSpeed = 0
 
 [G-Puppet@G-Projectile]
 Pivot = bottom
@@ -803,7 +803,7 @@ FXList = FX-Rotate
 ;User-Defined
 Pos = (0, 0)
 Depth = O-Shrapnel
-Speed = 300
+FSpeed = 300
 
 [B-Shrapnel@B-Projectile]
 CustomGravity = (0, 400, 0)
@@ -852,7 +852,7 @@ Scale = (6.0, 6.0)
 ;User-Defined
 Pos = (0, 0)
 Depth = O-MissileShield
-Speed = 200
+FSpeed = 200
 IsBouncy = true
 MaxMissileSpawnInterval = 0.1
 
@@ -900,7 +900,7 @@ LifeTime = 2.0
 ;User-Defined
 Pos = (0, 0)
 Depth = O-Explosion
-Speed = 0
+FSpeed = 0
 GrowthSpeed = 3
 
 [BP-Explosion@BP-Projectile]
@@ -947,7 +947,7 @@ LifeTime = 20.0
 ;User-Defined
 Pos = (0, 0)
 Depth = O-Ember
-Speed = 0
+FSpeed = 0
 FallSpeed = 50
 SwaySpeed = 50
 MaxSwayTime = 1.5
@@ -999,7 +999,7 @@ LifeTime = 0.25
 ;User-Defined
 Pos = (0, 0)
 Depth = O-Shockwave
-Speed = 200
+FSpeed = 200
 
 [B-Shockwave@B-Projectile]
 
