--- a/data/config/Spawner.ini
+++ b/data/config/Spawner.ini
@@ -8,75 +8,357 @@ UseParentSpace = position
 [SP-Spawner]
 CleanOnDelete = true ; Enforces the destruction of spawned objects upon that of their spawner.
 
-															;LASER P1
+															;NEUTRAL 1
 
-[SP-LaserP1@SP-Spawner]
+[SP-Neutral1@SP-Spawner]
+ActiveObject = 5
+
+[SP-Neutral1P1@SP-Neutral1]
 Object = O-LaserP1
 
-															;LASER P2
-
-[SP-LaserP2@SP-Spawner]
+[SP-Neutral1P2@SP-Neutral1]
 Object = O-LaserP2
 
-															;LASER HEATSEEKING P1
+															;NEUTRAL 2
+															
+[SP-Neutral2@SP-Spawner]
+ActiveObject = 3
 
-[SP-LaserHeatseekingP1@SP-Spawner]
-Object = O-LaserHeatseekingP1
-
-															;LASER HEATSEEKING P2
-
-[SP-LaserHeatseekingP2@SP-Spawner]
-Object = O-LaserHeatseekingP2
-
-															;LASER WALL P1
-
-[SP-LaserWallP1@SP-Spawner]
+[SP-Neutral2P1@SP-Neutral2]
 Object = O-LaserWallP1
 
-															;LASER WALL P2
-
-[SP-LaserWallP2@SP-Spawner]
+[SP-Neutral2P2@SP-Neutral2]
 Object = O-LaserWallP2
+															
+															;NEUTRAL 3
+															
+[SP-Neutral3@SP-Spawner]
+ActiveObject = 1
 
-															;LASER GATE P1
+[SP-Neutral3P1@SP-Neutral3]
+Object = O-LaserP1
 
-[SP-LaserGateP1@SP-Spawner]
-Object = O-LaserGateP1
+[SP-Neutral3P2@SP-Neutral3]
+Object = O-LaserP2
+															
+															;NEUTRAL 4
+															
+[SP-Neutral4@SP-Spawner]
+ActiveObject = 3
 
-															;LASER GATE P2
-
-[SP-LaserGateP2@SP-Spawner]
-Object = O-LaserGateP2
-
-															;ORB P1
-
-[SP-OrbP1@SP-Spawner]
+[SP-Neutral4P1@SP-Neutral4]
 Object = O-OrbP1
 
-															;ORB P2
-
-[SP-OrbP2@SP-Spawner]
+[SP-Neutral4P2@SP-Neutral4]
 Object = O-OrbP2
+															
+															;NEUTRAL 5
+															
+[SP-Neutral5@SP-Spawner]
+ActiveObject = 3
 
-															;MEDUSSA HEAD P1
-
-[SP-MedussaHeadP1@SP-Spawner]
+[SP-Neutral5P1@SP-Neutral5]
 Object = O-MedussaHeadP1
 
-															;MEDUSSA HEAD P2
-
-[SP-MedussaHeadP2@SP-Spawner]
+[SP-Neutral5P2@SP-Neutral5]
 Object = O-MedussaHeadP2
+															
+															;NEUTRAL 6
+															
+[SP-Neutral6@SP-Spawner]
+ActiveObject = 0
 
-															;GRENADE P1
+[SP-Neutral6P1@SP-Neutral6]
+Object = O-LaserP1
 
-[SP-GrenadeP1@SP-Spawner]
+[SP-Neutral6P2@SP-Neutral6]
+Object = O-LaserP2
+															
+															;NEUTRAL 7
+															
+[SP-Neutral7@SP-Spawner]
+ActiveObject = 1
+
+[SP-Neutral7P1@SP-Neutral7]
+Object = O-LaserP1
+
+[SP-Neutral7P2@SP-Neutral7]
+Object = O-LaserP2
+															
+															;NEUTRAL 8
+															
+[SP-Neutral8@SP-Spawner]
+ActiveObject = 1
+
+[SP-Neutral8P1@SP-Neutral8]
+Object = O-BeamP1
+
+[SP-Neutral8P2@SP-Neutral8]
+Object = O-BeamP2
+															
+															;UPWARD 1
+															
+[SP-Upward1@SP-Spawner]
+ActiveObject = 5
+
+[SP-Upward1P1@SP-Upward1]
+Object = O-OrbP1
+
+[SP-Upward1P2@SP-Upward1]
+Object = O-OrbP2
+															
+															;UPWARD 2
+															
+[SP-Upward2@SP-Spawner]
+ActiveObject = 1
+
+[SP-Upward2P1@SP-Upward2]
+Object = O-LaserHeatseekingP1
+
+[SP-Upward2P2@SP-Upward2]
+Object = O-LaserHeatseekingP2
+															
+															;UPWARD 3
+															
+[SP-Upward3@SP-Spawner]
+ActiveObject = 3
+
+[SP-Upward3P1@SP-Upward3]
+Object = O-TurretP1
+
+[SP-Upward3P2@SP-Upward3]
+Object = O-TurretP2
+															
+															;UPWARD 4
+															
+[SP-Upward4@SP-Spawner]
+ActiveObject = 60
+
+[SP-Upward4P1@SP-Upward4]
+Object = O-PuppetP1
+
+[SP-Upward4P2@SP-Upward4]
+Object = O-PuppetP2
+															
+															;UPWARD 5
+															
+[SP-Upward5@SP-Spawner]
+ActiveObject = 3
+
+[SP-Upward5P1@SP-Upward5]
 Object = O-GrenadeP1
 
-															;GRENADE P2
-
-[SP-GrenadeP2@SP-Spawner]
+[SP-Upward5P2@SP-Upward5]
 Object = O-GrenadeP2
+															
+															;UPWARD 6
+															
+[SP-Upward6@SP-Spawner]
+ActiveObject = 1
+
+[SP-Upward6P1@SP-Upward6]
+Object = O-FamiliarP1
+
+[SP-Upward6P2@SP-Upward6]
+Object = O-FamiliarP2
+															
+															;UPWARD 7
+															
+[SP-Upward7@SP-Spawner]
+ActiveObject = 3
+
+[SP-Upward7P1@SP-Upward7]
+Object = O-OrbP1
+
+[SP-Upward7P2@SP-Upward7]
+Object = O-OrbP2
+															
+															;UPWARD 8
+															
+[SP-Upward8@SP-Spawner]
+ActiveObject = 1
+
+[SP-Upward8P1@SP-Upward8]
+Object = O-BeamP1
+
+[SP-Upward8P2@SP-Upward8]
+Object = O-BeamP2
+															
+															;DOWNWARD 1
+															
+[SP-Downward1@SP-Spawner]
+ActiveObject = 6
+
+[SP-Downward1P1@SP-Downward1]
+Object = O-LaserP1
+
+[SP-Downward1P2@SP-Downward1]
+Object = O-LaserP2
+															
+															;DOWNWARD 2
+															
+[SP-Downward2@SP-Spawner]
+ActiveObject = 3
+
+[SP-Downward2P1@SP-Downward2]
+Object = O-LaserP1
+
+[SP-Downward2P2@SP-Downward2]
+Object = O-LaserP2
+															
+															;DOWNWARD 3
+															
+[SP-Downward3@SP-Spawner]
+ActiveObject = 1
+
+[SP-Downward3P1@SP-Downward3]
+Object = O-BeamP1
+
+[SP-Downward3P2@SP-Downward3]
+Object = O-BeamP2
+															
+															;DOWNWARD 4
+															
+[SP-Downward4@SP-Spawner]
+ActiveObject = 3
+
+[SP-Downward4P1@SP-Downward4]
+Object = O-BeamP1
+
+[SP-Downward4P2@SP-Downward4]
+Object = O-BeamP2
+															
+															;DOWNWARD 5
+															
+[SP-Downward5@SP-Spawner]
+ActiveObject = 16
+
+[SP-Downward5P1@SP-Downward5]
+Object = O-LaserP1
+
+[SP-Downward5P2@SP-Downward5]
+Object = O-LaserP2
+															
+															;DOWNWARD 6
+															
+[SP-Downward6@SP-Spawner]
+ActiveObject = 1
+
+[SP-Downward6P1@SP-Downward6]
+Object = O-FamiliarP1
+
+[SP-Downward6P2@SP-Downward6]
+Object = O-FamiliarP2
+															
+															;DOWNWARD 7
+															
+[SP-Downward7@SP-Spawner]
+ActiveObject = 3
+
+[SP-Downward7P1@SP-Downward7]
+Object = O-PrismP1
+
+[SP-Downward7P2@SP-Downward7]
+Object = O-PrismP2
+															
+															;DOWNWARD 8
+															
+[SP-Downward8@SP-Spawner]
+ActiveObject = 1
+
+[SP-Downward8P1@SP-Downward8]
+Object = O-LaserGateP1
+
+[SP-Downward8P2@SP-Downward8]
+Object = O-LaserGateP2
+															
+															;SUPER 1
+															
+[SP-Super1@SP-Spawner]
+ActiveObject = 48
+
+[SP-Super1P1@SP-Super1]
+Object = O-LaserP1
+
+[SP-Super1P2@SP-Super1]
+Object = O-LaserP2
+															
+															;SUPER 2
+															
+[SP-Super2@SP-Spawner]
+ActiveObject = 25
+
+[SP-Super2P1@SP-Super2]
+Object = O-OrbP1
+
+[SP-Super2P2@SP-Super2]
+Object = O-OrbP2
+															
+															;SUPER 3
+															
+[SP-Super3@SP-Spawner]
+ActiveObject = 15
+
+[SP-Super3P1@SP-Super3]
+Object = O-LaserWallP1
+
+[SP-Super3P2@SP-Super3]
+Object = O-LaserWallP2
+															
+															;SUPER 4
+															
+[SP-Super4@SP-Spawner]
+ActiveObject = 16
+
+[SP-Super4P1@SP-Super4]
+Object = O-PuppetP1
+
+[SP-Super4P2@SP-Super4]
+Object = O-PuppetP2
+															
+															;SUPER 5
+															
+[SP-Super5@SP-Spawner]
+ActiveObject = 1
+
+[SP-Super5P1@SP-Super5]
+Object = O-MissileShieldP1
+
+[SP-Super5P2@SP-Super5]
+Object = O-MissileShieldP2
+															
+															;SUPER 6
+															
+[SP-Super6@SP-Spawner]
+ActiveObject = 1
+
+[SP-Super6P1@SP-Super6]
+Object = O-FamiliarP1
+
+[SP-Super6P2@SP-Super6]
+Object = O-FamiliarP2
+															
+															;SUPER 7
+															
+[SP-Super7@SP-Spawner]
+ActiveObject = 1
+
+[SP-Super7P1@SP-Super7]
+Object = O-SpacerP1
+
+[SP-Super7P2@SP-Super7]
+Object = O-SpacerP2
+															
+															;SUPER 8
+															
+[SP-Super8@SP-Spawner]
+ActiveObject = 3
+
+[SP-Super8P1@SP-Super8]
+Object = O-TurretP1
+
+[SP-Super8P2@SP-Super8]
+Object = O-TurretP2
 
 															;SHRAPNEL
 
@@ -92,81 +374,6 @@ Object = O-ShrapnelP1
 
 [SP-ShrapnelP2@SP-Shrapnel]
 Object = O-ShrapnelP2
-
-															;PRISM
-
-[SP-Prism@SP-Spawner]
-UseRotation = false
-
-															;PRISM P1
-
-[SP-PrismP1@SP-Prism]
-Object = O-PrismP1
-
-															;PRISM P2
-
-[SP-PrismP2@SP-Prism]
-Object = O-PrismP2
-
-															;TURRET P1
-
-[SP-TurretP1@SP-Spawner]
-Object = O-TurretP1
-
-															;TURRET P2
-
-[SP-TurretP2@SP-Spawner]
-Object = O-TurretP2
-
-															;BEAM
-
-[SP-Beam@SP-Spawner]
-UseSelfAsParent = true
-
-															;BEAM P1
-
-[SP-BeamP1@SP-Beam]
-Object = O-BeamP1
-
-															;BEAM P2
-
-[SP-BeamP2@SP-Beam]
-Object = O-BeamP2
-
-															;FAMILIAR P1
-
-[SP-FamiliarP1@SP-Spawner]
-Object = O-FamiliarP1
-
-															;FAMILIAR P2
-
-[SP-FamiliarP2@SP-Spawner]
-Object = O-FamiliarP2
-
-															;PUPPET P1
-
-[SP-PuppetP1@SP-Spawner]
-Object = O-PuppetP1
-
-															;PUPPET P2
-
-[SP-PuppetP2@SP-Spawner]
-Object = O-PuppetP2
-
-															;SPACER
-
-[SP-Spacer@SP-Spawner]
-IgnoreFromParent = rotation
-
-															;SPACER P1
-
-[SP-SpacerP1@SP-Spacer]
-Object = O-SpacerP1
-
-															;SPACER P2
-
-[SP-SpacerP2@SP-Spacer]
-Object = O-SpacerP2
 
 															;TURRET LASER
 
@@ -348,17 +555,17 @@ Object = O-LaserRotatedP2
 															;GUN
 
 [O-Gun@O-Spawner]
-Body = B-Gun
+;Body = B-Gun
 
-[B-Gun]
-Dynamic = true
-CustomGravity = (0, 0, 0)
-PartList = BP-Gun
+; [B-Gun]
+; Dynamic = true
+; CustomGravity = (0, 0, 0)
+; PartList = BP-Gun
 
-[BP-Gun]
-Type = box
-TopLeft = (-5, -5, 0)
-BottomRight = (5, 5, 0)
+; [BP-Gun]
+; Type = box
+; TopLeft = (-5, -5, 0)
+; BottomRight = (5, 5, 0)
 
 															;NEUTRAL GUN
 
@@ -448,322 +655,324 @@ Spawner = SP-SpacerLaser3P2
 															;NEUTRAL GUN 1 P1
 
 [O-NeutralGun1P1@O-NeutralGun]
-Spawner = SP-LaserP1
+Spawner = SP-Neutral1P1
 
 															;UPWARD GUN 1 P1
 
 [O-UpwardGun1P1@O-UpwardGun]
-Spawner = SP-OrbP1
+Spawner = SP-Upward1P1
 
 															;DOWNWARD GUN 1 P1
 
 [O-DownwardGun1P1@O-DownwardGun]
-Spawner = SP-LaserP1
+Spawner = SP-Downward1P1
 
 															;SUPER GUN 1 P1
 
 [O-SuperGun1P1@O-SuperGun]
-Spawner = SP-LaserP1
+Spawner = SP-Super1P1
 
 															;NEUTRAL GUN 1 P2
 
 [O-NeutralGun1P2@O-NeutralGun]
-Spawner = SP-LaserP2
+Spawner = SP-Neutral1P2
 
 															;UPWARD GUN 1 P2
 
 [O-UpwardGun1P2@O-UpwardGun]
-Spawner = SP-OrbP2
+Spawner = SP-Upward1P2
 
 															;DOWNWARD GUN 1 P2
 
 [O-DownwardGun1P2@O-DownwardGun]
-Spawner = SP-LaserP2
+Spawner = SP-Downward1P2
 
 															;SUPER GUN 1 P2
 
 [O-SuperGun1P2@O-SuperGun]
-Spawner = SP-LaserP2
+Spawner = SP-Super1P2
 
 															;NEUTRAL GUN 2 P1
 
 [O-NeutralGun2P1@O-NeutralGun]
-Spawner = SP-LaserWallP1
+Spawner = SP-Neutral2P1
 
 															;UPWARD GUN 2 P1
 
 [O-UpwardGun2P1@O-UpwardGun]
-Spawner = SP-LaserHeatseekingP1
+Spawner = SP-Upward2P1
 
 															;DOWNWARD GUN 2 P1
 
 [O-DownwardGun2P1@O-DownwardGun]
-Spawner = SP-LaserP1
+Spawner = SP-Downward2P1
 
 															;SUPER GUN 2 P1
 
 [O-SuperGun2P1@O-SuperGun]
-Spawner = SP-OrbP1
+Spawner = SP-Super2P1
 
 															;NEUTRAL GUN 2 P2
 
 [O-NeutralGun2P2@O-NeutralGun]
-Spawner = SP-LaserWallP2
+Spawner = SP-Neutral2P2
 
 															;UPWARD GUN 2 P2
 
 [O-UpwardGun2P2@O-UpwardGun]
-Spawner = SP-LaserHeatseekingP2
+Spawner = SP-Upward2P2
 
 															;DOWNWARD GUN 2 P2
 
 [O-DownwardGun2P2@O-DownwardGun]
-Spawner = SP-LaserP2
+Spawner = SP-Downward2P2
 
 															;SUPER GUN 2 P2
 
 [O-SuperGun2P2@O-SuperGun]
-Spawner = SP-OrbP2
+Spawner = SP-Super2P2
 
 															;NEUTRAL GUN 3 P1
 
 [O-NeutralGun3P1@O-NeutralGun]
-Spawner = SP-LaserP1
+Spawner = SP-Neutral3P1
 
 															;UPWARD GUN 3 P1
 
 [O-UpwardGun3P1@O-UpwardGun]
-Spawner = SP-TurretP1
+Spawner = SP-Upward3P1
 
 															;DOWNWARD GUN 3 P1
 
 [O-DownwardGun3P1@O-DownwardGun]
-Spawner = SP-BeamP1
+Spawner = SP-Downward3P1
 
 															;SUPER GUN 3 P1
 
 [O-SuperGun3P1@O-SuperGun]
-Spawner = SP-LaserWallP1
+Spawner = SP-Super3P1
 
 															;NEUTRAL GUN 3 P2
 
 [O-NeutralGun3P2@O-NeutralGun]
-Spawner = SP-LaserP2
+Spawner = SP-Neutral3P2
 
 															;UPWARD GUN 3 P2
 
 [O-UpwardGun3P2@O-UpwardGun]
-Spawner = SP-TurretP2
+Spawner = SP-Upward3P2
 
 															;DOWNWARD GUN 3 P2
 
 [O-DownwardGun3P2@O-DownwardGun]
-Spawner = SP-BeamP2
+Spawner = SP-Downward3P2
 
 															;SUPER GUN 3 P2
 
 [O-SuperGun3P2@O-SuperGun]
-Spawner = SP-LaserWallP2
+Spawner = SP-Super3P2
 
 															;NEUTRAL GUN 4 P1
 
 [O-NeutralGun4P1@O-NeutralGun]
-Spawner = SP-OrbP1
+Spawner = SP-Neutral4P1
 
 															;UPWARD GUN 4 P1
 
 [O-UpwardGun4P1@O-UpwardGun]
-Spawner = SP-PuppetP1
+Spawner = SP-Upward4P1
 
 															;DOWNWARD GUN 4 P1
 
 [O-DownwardGun4P1@O-DownwardGun]
-Spawner = SP-BeamP1
+Spawner = SP-Downward4P1
 
 															;SUPER GUN 4 P1
 
 [O-SuperGun4P1@O-SuperGun]
-Spawner = SP-PuppetP1
+Spawner = SP-Super4P1
 
 															;NEUTRAL GUN 4 P2
 
 [O-NeutralGun4P2@O-NeutralGun]
-Spawner = SP-OrbP2
+Spawner = SP-Neutral4P2
 
 															;UPWARD GUN 4 P2
 
 [O-UpwardGun4P2@O-UpwardGun]
-Spawner = SP-PuppetP2
+Spawner = SP-Upward4P2
 
 															;DOWNWARD GUN 4 P2
 
 [O-DownwardGun4P2@O-DownwardGun]
-Spawner = SP-BeamP2
+Spawner = SP-Downward4P2
 
 															;SUPER GUN 4 P2
 
 [O-SuperGun4P2@O-SuperGun]
-Spawner = SP-PuppetP2
+Spawner = SP-Super4P2
 
 															;NEUTRAL GUN 5 P1
 
 [O-NeutralGun5P1@O-NeutralGun]
-Spawner = SP-MedussaHeadP1
+Spawner = SP-Neutral5P1
 
 															;UPWARD GUN 5 P1
 
 [O-UpwardGun5P1@O-UpwardGun]
-Spawner = SP-GrenadeP1
+Spawner = SP-Upward5P1
 
 															;DOWNWARD GUN 5 P1
 
 [O-DownwardGun5P1@O-DownwardGun]
-Spawner = SP-LaserP1
+Position = (0.0, 0.0, 0.0)
+Spawner = SP-Downward5P1
 
 															;SUPER GUN 5 P1
 
 [O-SuperGun5P1@O-SuperGun]
-Spawner = SP-LaserP1
+Spawner = SP-Super5P1
 
 															;NEUTRAL GUN 5 P2
 
 [O-NeutralGun5P2@O-NeutralGun]
-Spawner = SP-MedussaHeadP2
+Spawner = Neutral5P2
 
 															;UPWARD GUN 5 P2
 
 [O-UpwardGun5P2@O-UpwardGun]
-Spawner = SP-GrenadeP2
+Spawner = Upward5P2
 
 															;DOWNWARD GUN 5 P2
 
 [O-DownwardGun5P2@O-DownwardGun]
-Spawner = SP-LaserP2
+Position = (0.0, 0.0, 0.0)
+Spawner = SP-Downward5P2
 
 															;SUPER GUN 5 P2
 
 [O-SuperGun5P2@O-SuperGun]
-Spawner = SP-LaserP2
+Spawner = SP-Super5P2
 
 															;NEUTRAL GUN 6 P1
 
 [O-NeutralGun6P1@O-NeutralGun]
-Spawner = SP-LaserP1
+Spawner = SP-Neutral6P1
 
 															;UPWARD GUN 6 P1
 
 [O-UpwardGun6P1@O-UpwardGun]
-Spawner = SP-FamiliarP1
+Spawner = SP-Upward6P1
 
 															;DOWNWARD GUN 6 P1
 
 [O-DownwardGun6P1@O-DownwardGun]
-Spawner = SP-FamiliarP1
+Spawner = SP-Downward6P1
 
 															;SUPER GUN 6 P1
 
 [O-SuperGun6P1@O-SuperGun]
-Spawner = SP-FamiliarP1
+Spawner = SP-Super6P1
 
 															;NEUTRAL GUN 6 P2
 
 [O-NeutralGun6P2@O-NeutralGun]
-Spawner = SP-LaserP2
+Spawner = SP-Neutral6P2
 
 															;UPWARD GUN 6 P2
 
 [O-UpwardGun6P2@O-UpwardGun]
-Spawner = SP-FamiliarP2
+Spawner = SP-Upward6P2
 
 															;DOWNWARD GUN 6 P2
 
 [O-DownwardGun6P2@O-DownwardGun]
-Spawner = SP-FamiliarP2
+Spawner = SP-Downward6P2
 
 															;SUPER GUN 6 P2
 
 [O-SuperGun6P2@O-SuperGun]
-Spawner = SP-FamiliarP2
+Spawner = SP-Super6P2
 
 															;NEUTRAL GUN 7 P1
 
 [O-NeutralGun7P1@O-NeutralGun]
-Spawner = SP-LaserP1
+Spawner = SP-Neutral7P1
 
 															;UPWARD GUN 7 P1
 
 [O-UpwardGun7P1@O-UpwardGun]
-Spawner = SP-OrbP1
+Spawner = SP-Upward7P1
 
 															;DOWNWARD GUN 7 P1
 
 [O-DownwardGun7P1@O-DownwardGun]
-Spawner = SP-PrismP1
+Spawner = SP-Downward7P1
 
 															;SUPER GUN 7 P1
 
 [O-SuperGun7P1@O-SuperGun]
-Spawner = SP-SpacerP1
+Spawner = SP-Super7P1
 
 															;NEUTRAL GUN 7 P2
 
 [O-NeutralGun7P2@O-NeutralGun]
-Spawner = SP-LaserP2
+Spawner = SP-Neutral7P2
 
 															;UPWARD GUN 7 P2
 
 [O-UpwardGun7P2@O-UpwardGun]
-Spawner = SP-OrbP2
+Spawner = SP-Upward7P2
 
 															;DOWNWARD GUN 7 P2
 
 [O-DownwardGun7P2@O-DownwardGun]
-Spawner = SP-PrismP2
+Spawner = SP-Downward7P2
 
 															;SUPER GUN 7 P2
 
 [O-SuperGun7P2@O-SuperGun]
-Spawner = SP-SpacerP2
+Spawner = SP-Super7P2
 
 															;NEUTRAL GUN 8 P1
 
 [O-NeutralGun8P1@O-NeutralGun]
-Spawner = SP-BeamP1
+Spawner = SP-Neutral8P1
 
 															;UPWARD GUN 8 P1
 
 [O-UpwardGun8P1@O-UpwardGun]
-Spawner = SP-BeamP1
+Spawner = SP-Upward8P1
 
 															;DOWNWARD GUN 8 P1
 
 [O-DownwardGun8P1@O-DownwardGun]
-Spawner = SP-LaserGateP1
+Spawner = SP-Downward8P1
 
 															;SUPER GUN 8 P1
 
 [O-SuperGun8P1@O-SuperGun]
-Spawner = SP-TurretP1
+Spawner = SP-Super8P1
 
 															;NEUTRAL GUN 8 P2
 
 [O-NeutralGun8P2@O-NeutralGun]
-Spawner = SP-BeamP2
+Spawner = SP-Neutral8P2
 
 															;UPWARD GUN 8 P2
 
 [O-UpwardGun8P2@O-UpwardGun]
-Spawner = SP-BeamP2
+Spawner = SP-Upward8P2
 
 															;DOWNWARD GUN 8 P2
 
 [O-DownwardGun8P2@O-DownwardGun]
-Spawner = SP-LaserGateP2
+Spawner = SP-Downward8P2
 
 															;SUPER GUN 8 P2
 
 [O-SuperGun8P2@O-SuperGun]
-Spawner = SP-TurretP2
+Spawner = SP-Super8P2
 
 															;TURRET GUN P1
 
