--- a/data/config/Icon.ini
+++ b/data/config/Icon.ini
@@ -97,90 +97,96 @@ ChildList = O-Ship7IconP1
 Graphic = G-Pilot8
 ChildList = O-Ship8IconP1
 
-[O-Pilot1IconDash@O-PilotIcon]
+															;PILOT ICON DASH
+
+[O-PilotIconDash@O-PilotIcon]
+UseParentSpace = both
+IgnoreFromParent = none
+
+[O-Pilot1IconDash@O-PilotIconDash]
 Graphic = G-Pilot1
 LifeTime = fx
 FXList = FX-FadeOut
 ChildList = O-Ship1IconDashP1
 
-[O-Pilot2IconDash@O-PilotIcon]
+[O-Pilot2IconDash@O-PilotIconDash]
 Graphic = G-Pilot2
 LifeTime = fx
 FXList = FX-FadeOut
 ChildList = O-Ship2IconDashP1
 
-[O-Pilot3IconDash@O-PilotIcon]
+[O-Pilot3IconDash@O-PilotIconDash]
 Graphic = G-Pilot3
 LifeTime = fx
 FXList = FX-FadeOut
 ChildList = O-Ship3IconDashP1
 
-[O-Pilot4IconDash@O-PilotIcon]
+[O-Pilot4IconDash@O-PilotIconDash]
 Graphic = G-Pilot4
 LifeTime = fx
 FXList = FX-FadeOut
 ChildList = O-Ship4IconDashP1
 
-[O-Pilot5IconDash@O-PilotIcon]
+[O-Pilot5IconDash@O-PilotIconDash]
 Graphic = G-Pilot5
 LifeTime = fx
 FXList = FX-FadeOut
 ChildList = O-Ship5IconDashP1
 
-[O-Pilot6IconDash@O-PilotIcon]
+[O-Pilot6IconDash@O-PilotIconDash]
 Graphic = G-Pilot6
 LifeTime = fx
 FXList = FX-FadeOut
 ChildList = O-Ship6IconDashP1
 
-[O-Pilot7IconDash@O-PilotIcon]
+[O-Pilot7IconDash@O-PilotIconDash]
 Graphic = G-Pilot7
 LifeTime = fx
 FXList = FX-FadeOut
 ChildList = O-Ship7IconDashP1
 
-[O-Pilot8IconDash@O-PilotIcon]
+[O-Pilot8IconDash@O-PilotIconDash]
 Graphic = G-Pilot8
 LifeTime = fx
 FXList = FX-FadeOut
 ChildList = O-Ship8IconDashP1
 
-[O-Pilot1IconDashSolo@O-PilotIcon]
+[O-Pilot1IconDashSolo@O-PilotIconDash]
 Graphic = G-Pilot1
 LifeTime = fx
 FXList = FX-FadeOut
 
-[O-Pilot2IconDashSolo@O-PilotIcon]
+[O-Pilot2IconDashSolo@O-PilotIconDash]
 Graphic = G-Pilot2
 LifeTime = fx
 FXList = FX-FadeOut
 
-[O-Pilot3IconDashSolo@O-PilotIcon]
+[O-Pilot3IconDashSolo@O-PilotIconDash]
 Graphic = G-Pilot3
 LifeTime = fx
 FXList = FX-FadeOut
 
-[O-Pilot4IconDashSolo@O-PilotIcon]
+[O-Pilot4IconDashSolo@O-PilotIconDash]
 Graphic = G-Pilot4
 LifeTime = fx
 FXList = FX-FadeOut
 
-[O-Pilot5IconDashSolo@O-PilotIcon]
+[O-Pilot5IconDashSolo@O-PilotIconDash]
 Graphic = G-Pilot5
 LifeTime = fx
 FXList = FX-FadeOut
 
-[O-Pilot6IconDashSolo@O-PilotIcon]
+[O-Pilot6IconDashSolo@O-PilotIconDash]
 Graphic = G-Pilot6
 LifeTime = fx
 FXList = FX-FadeOut
 
-[O-Pilot7IconDashSolo@O-PilotIcon]
+[O-Pilot7IconDashSolo@O-PilotIconDash]
 Graphic = G-Pilot7
 LifeTime = fx
 FXList = FX-FadeOut
 
-[O-Pilot8IconDashSolo@O-PilotIcon]
+[O-Pilot8IconDashSolo@O-PilotIconDash]
 Graphic = G-Pilot8
 LifeTime = fx
 FXList = FX-FadeOut
@@ -221,35 +227,41 @@ Graphic = G-Ship7
 [O-Ship8IconP1@O-ShipIcon]
 Graphic = G-Ship8
 
-[O-Ship1IconDashP1@O-ShipIcon]
+															;SHIP ICON DASH
+
+[O-ShipIconDash@O-ShipIcon]
+UseParentSpace = both
+IgnoreFromParent = none
+
+[O-Ship1IconDashP1@O-ShipIconDash]
 Graphic = G-Ship1
 FXList = FX-FadeOut
 
-[O-Ship2IconDashP1@O-ShipIcon]
+[O-Ship2IconDashP1@O-ShipIconDash]
 Graphic = G-Ship2
 FXList = FX-FadeOut
 
-[O-Ship3IconDashP1@O-ShipIcon]
+[O-Ship3IconDashP1@O-ShipIconDash]
 Graphic = G-Ship3
 FXList = FX-FadeOut
 
-[O-Ship4IconDashP1@O-ShipIcon]
+[O-Ship4IconDashP1@O-ShipIconDash]
 Graphic = G-Ship4
 FXList = FX-FadeOut
 
-[O-Ship5IconDashP1@O-ShipIcon]
+[O-Ship5IconDashP1@O-ShipIconDash]
 Graphic = G-Ship5
 FXList = FX-FadeOut
 
-[O-Ship6IconDashP1@O-ShipIcon]
+[O-Ship6IconDashP1@O-ShipIconDash]
 Graphic = G-Ship6
 FXList = FX-FadeOut
 
-[O-Ship7IconDashP1@O-ShipIcon]
+[O-Ship7IconDashP1@O-ShipIconDash]
 Graphic = G-Ship7
 FXList = FX-FadeOut
 
-[O-Ship8IconDashP1@O-ShipIcon]
+[O-Ship8IconDashP1@O-ShipIconDash]
 Graphic = G-Ship8
 FXList = FX-FadeOut
 
@@ -276,3 +288,33 @@ Graphic = G-ElectricityIconP2
 
 [G-ElectricityIconP2@G-ElectricityIcon]
 Texture = SpaceShooterRedux/PNG/Lasers/laserRed11.png
+
+															;NO DASH ICON
+															
+[O-NoDashIcon@ScrollObject]
+Group = pilot
+Graphic = G-NoDashIcon
+Position = @Commands.CalculatePosition
+UseParentSpace = both
+;User-Defined
+Pos = (-0.5, -0.5)
+Depth = O-NoDashIcon
+
+[G-NoDashIcon]
+Texture = SpaceShooterRedux/PNG/Power-ups/things_silver.png
+Pivot = center
+															
+															;NO PARRY ICON
+															
+[O-NoParryIcon@ScrollObject]
+Group = pilot
+Graphic = G-NoParryIcon
+Position = @Commands.CalculatePosition
+UseParentSpace = both
+;User-Defined
+Pos = (0.5, -0.5)
+Depth = O-NoParryIcon
+
+[G-NoParryIcon]
+Texture = SpaceShooterRedux/PNG/Power-ups/bold_silver.png
+Pivot = center
