--- a/data/config/Ship.ini
+++ b/data/config/Ship.ini
@@ -3,7 +3,6 @@
 [O-Ship]
 Group = ship
 Position = @Commands.CalculatePosition
-Body = B-Ship
 Rotation = 90.0
 ;User-Defined
 Pos = (0, 0)
@@ -12,15 +11,9 @@ Depth = O-Ship
 [G-Ship]
 Pivot = center
 
-[B-Ship]
-Dynamic = true
-CustomGravity = (0, 0, 0)
-PartList = BP-Ship
-
 [BP-Ship]
 Type = box
 Solid = true
-Density = 0.1
 SelfFlags = ship
 CheckMask = geometry
 
@@ -43,12 +36,16 @@ Graphic = G-Ship1
 [G-Ship1@G-Ship]
 Texture = SpaceShooterRedux/PNG/playerShip1_green.png
 
+[BP-Ship1@BP-Ship]
+TopLeft = (-37.5, -49.5)
+BottomRight = (37.5, 49.5)
+
+
 															;SHIP 1 P1
 
 [O-Ship1P1@O-Ship1]
 ShaderList = @O-ShipP1
 ChildList = O-NeutralGun1P1 # O-UpwardGun1P1 # O-DownwardGun1P1 # O-SuperGun1P1
-ChildJointList = J-Weld # J-Weld # J-Weld # J-Weld
 
 															;SHIP 1 P2
 
@@ -56,7 +53,6 @@ ChildJointList = J-Weld # J-Weld # J-Weld # J-Weld
 Flip = @O-ShipP2
 ShaderList = @O-ShipP2
 ChildList = O-NeutralGun1P2 # O-UpwardGun1P2 # O-DownwardGun1P2 # O-SuperGun1P2
-ChildJointList = J-Weld # J-Weld # J-Weld # J-Weld
 
 															;SHIP 2
 
@@ -66,12 +62,15 @@ Graphic = G-Ship2
 [G-Ship2@G-Ship]
 Texture = SpaceShooterRedux/PNG/playerShip2_green.png
 
+[BP-Ship2@BP-Ship]
+TopLeft = (-37.5, -56)
+BottomRight = (37.5, 56)
+
 															;SHIP 2 P1
 
 [O-Ship2P1@O-Ship2]
 ShaderList = @O-ShipP1
 ChildList = O-NeutralGun2P1 # O-UpwardGun2P1 # O-DownwardGun2P1 # O-SuperGun2P1
-ChildJointList = J-Weld # J-Weld # J-Weld # J-Weld
 
 															;SHIP 2 P2
 
@@ -79,7 +78,6 @@ ChildJointList = J-Weld # J-Weld # J-Weld # J-Weld
 Flip = @O-ShipP2
 ShaderList = @O-ShipP2
 ChildList = O-NeutralGun2P2 # O-UpwardGun2P2 # O-DownwardGun2P2 # O-SuperGun2P2
-ChildJointList = J-Weld # J-Weld # J-Weld # J-Weld
 
 															;SHIP 3
 
@@ -89,12 +87,15 @@ Graphic = G-Ship3
 [G-Ship3@G-Ship]
 Texture = SpaceShooterRedux/PNG/playerShip3_green.png
 
+[BP-Ship3@BP-Ship]
+TopLeft = (-37.5, -49)
+BottomRight = (37.5, 49)
+
 															;SHIP 3 P1
 
 [O-Ship3P1@O-Ship3]
 ShaderList = @O-ShipP1
 ChildList = O-NeutralGun3P1 # O-UpwardGun3P1 # O-DownwardGun3P1 # O-SuperGun3P1
-ChildJointList = J-Weld # J-Weld # J-Weld # J-Weld
 
 															;SHIP 3 P2
 
@@ -102,7 +103,6 @@ ChildJointList = J-Weld # J-Weld # J-Weld # J-Weld
 Flip = @O-ShipP2
 ShaderList = @O-ShipP2
 ChildList = O-NeutralGun3P2 # O-UpwardGun3P2 # O-DownwardGun3P2 # O-SuperGun3P2
-ChildJointList = J-Weld # J-Weld # J-Weld # J-Weld
 
 															;SHIP 4
 
@@ -113,12 +113,15 @@ Graphic = G-Ship4
 Texture = SpaceShooterRedux/PNG/Enemies/enemyGreen1.png
 Flip = y
 
+[BP-Ship4@BP-Ship]
+TopLeft = (-42, -46.5)
+BottomRight = (42, 46.5)
+
 															;SHIP 4 P1
 
 [O-Ship4P1@O-Ship4]
 ShaderList = @O-ShipP1
 ChildList = O-NeutralGun4P1 # O-UpwardGun4P1 # O-DownwardGun4P1 # O-SuperGun4P1
-ChildJointList = J-Weld # J-Weld # J-Weld # J-Weld
 
 															;SHIP 4 P2
 
@@ -126,7 +129,6 @@ ChildJointList = J-Weld # J-Weld # J-Weld # J-Weld
 Flip = @O-ShipP2
 ShaderList = @O-ShipP2
 ChildList = O-NeutralGun4P2 # O-UpwardGun4P2 # O-DownwardGun4P2 # O-SuperGun4P2
-ChildJointList = J-Weld # J-Weld # J-Weld # J-Weld
 
 															;SHIP 5
 
@@ -137,12 +139,15 @@ Graphic = G-Ship5
 Texture = SpaceShooterRedux/PNG/Enemies/enemyGreen2.png
 Flip = y
 
+[BP-Ship5@BP-Ship]
+TopLeft = (-42, -52)
+BottomRight = (42, 52)
+
 															;SHIP 5 P1
 
 [O-Ship5P1@O-Ship5]
 ShaderList = @O-ShipP1
 ChildList = O-NeutralGun5P1 # O-UpwardGun5P1 # O-DownwardGun5P1 # O-SuperGun5P1
-ChildJointList = J-Weld # J-Weld # J-Weld # J-Weld
 
 															;SHIP 5 P2
 
@@ -150,7 +155,6 @@ ChildJointList = J-Weld # J-Weld # J-Weld # J-Weld
 Flip = @O-ShipP2
 ShaderList = @O-ShipP2
 ChildList = O-NeutralGun5P2 # O-UpwardGun5P2 # O-DownwardGun5P2 # O-SuperGun5P2
-ChildJointList = J-Weld # J-Weld # J-Weld # J-Weld
 
 															;SHIP 6
 
@@ -161,12 +165,15 @@ Graphic = G-Ship6
 Texture = SpaceShooterRedux/PNG/Enemies/enemyGreen3.png
 Flip = y
 
+[BP-Ship6@BP-Ship]
+TopLeft = (-42, -51.5)
+BottomRight = (42, 51.5)
+
 															;SHIP 6 P1
 
 [O-Ship6P1@O-Ship6]
 ShaderList = @O-ShipP1
 ChildList = O-NeutralGun6P1 # O-UpwardGun6P1 # O-DownwardGun6P1 # O-SuperGun6P1
-ChildJointList = J-Weld # J-Weld # J-Weld # J-Weld
 
 															;SHIP 6 P2
 
@@ -174,7 +181,6 @@ ChildJointList = J-Weld # J-Weld # J-Weld # J-Weld
 Flip = @O-ShipP2
 ShaderList = @O-ShipP2
 ChildList = O-NeutralGun6P2 # O-UpwardGun6P2 # O-DownwardGun6P2 # O-SuperGun6P2
-ChildJointList = J-Weld # J-Weld # J-Weld # J-Weld
 
 															;SHIP 7
 
@@ -185,12 +191,15 @@ Graphic = G-Ship7
 Texture = SpaceShooterRedux/PNG/Enemies/enemyGreen4.png
 Flip = y
 
+[BP-Ship7@BP-Ship]
+TopLeft = (-42, -41)
+BottomRight = (42, 41)
+
 															;SHIP 7 P1
 
 [O-Ship7P1@O-Ship7]
 ShaderList = @O-ShipP1
 ChildList = O-NeutralGun7P1 # O-UpwardGun7P1 # O-DownwardGun7P1 # O-SuperGun7P1
-ChildJointList = J-Weld # J-Weld # J-Weld # J-Weld
 
 															;SHIP 7 P2
 
@@ -198,7 +207,6 @@ ChildJointList = J-Weld # J-Weld # J-Weld # J-Weld
 Flip = @O-ShipP2
 ShaderList = @O-ShipP2
 ChildList = O-NeutralGun7P2 # O-UpwardGun7P2 # O-DownwardGun7P2 # O-SuperGun7P2
-ChildJointList = J-Weld # J-Weld # J-Weld # J-Weld
 
 															;SHIP 8
 
@@ -209,12 +217,15 @@ Graphic = G-Ship8
 Texture = SpaceShooterRedux/PNG/Enemies/enemyGreen5.png
 Flip = y
 
+[BP-Ship8@BP-Ship]
+TopLeft = (-42, -48.5)
+BottomRight = (42, 48.5)
+
 															;SHIP 8 P1
 
 [O-Ship8P1@O-Ship8]
 ShaderList = @O-ShipP1
 ChildList = O-NeutralGun8P1 # O-UpwardGun8P1 # O-DownwardGun8P1 # O-SuperGun8P1
-ChildJointList = J-Weld # J-Weld # J-Weld # J-Weld
 
 															;SHIP 8 P2
 
@@ -222,4 +233,3 @@ ChildJointList = J-Weld # J-Weld # J-Weld # J-Weld
 Flip = @O-ShipP2
 ShaderList = @O-ShipP2
 ChildList = O-NeutralGun8P2 # O-UpwardGun8P2 # O-DownwardGun8P2 # O-SuperGun8P2
-ChildJointList = J-Weld # J-Weld # J-Weld # J-Weld
