Implemented Spawners where appropriate, though I encountered some difficulties regarding active object counts and limits that I will have to resolve at some point.

--- a/data/config/Hexpatriates.ini
+++ b/data/config/Hexpatriates.ini
@@ -161,6 +161,7 @@ CalculateSuperInput = % > @, > Get < PlayerType, > Get GenericInput Super, Retur
 	O-Ember = 0.27
 	O-Laser = 0.18
 	O-LaserHeatseeking = 0.09
+	O-LaserTeleportable = 0.045
 	O-Shrapnel = 0
 ;EFFECT #
 	O-Melee = 1
