--- a/data/config/LaserPortal.ini
+++ b/data/config/LaserPortal.ini
@@ -21,12 +21,11 @@ Solid = false
 															;LASER PORTAL ENTRANCE
 
 [O-LaserPortalEntrance@O-LaserPortal]
-;O-LaserPortalEntrance Class Data
-ExitDirection = 0.0
 
 [O-LaserPortalEntranceP1@O-LaserPortalEntrance]
 Graphic = G-LaserPortalEntranceP1
 Body = B-LaserPortalEntranceP1
+ChildList = O-LaserPortalEntranceGunP1
 
 [G-LaserPortalEntranceP1@G-LaserPortal]
 Texture = SpaceShooterRedux/PNG/Lasers/laserBlue08.png
@@ -41,6 +40,7 @@ CheckMask = projectileP1
 [O-LaserPortalEntranceP2@O-LaserPortalEntrance]
 Graphic = G-LaserPortalEntranceP2
 Body = B-LaserPortalEntranceP2
+ChildList = O-LaserPortalEntranceGunP2
 
 [G-LaserPortalEntranceP2@G-LaserPortal]
 Texture = SpaceShooterRedux/PNG/Lasers/laserRed08.png
