--- a/data/config/Projectile.ini
+++ b/data/config/Projectile.ini
@@ -64,6 +64,53 @@ PartList = BP-LaserP2
 SelfFlags = projectileP2
 CheckMask = geometry # space # pilotP1 # projectileP2
 
+															;LASER TELEPORTABLE
+
+[O-LaserTeleportable@O-Projectile]
+Group = projectileSmall
+Position = @Commands.CalculatePosition
+;User-Defined
+Pos = (0, 0)
+Depth = O-LaserTeleportable
+FSpeed = 1000
+
+[BP-LaserTeleportable@BP-Projectile]
+Type = box
+
+															;LASER TELEPORTABLE P1
+
+[O-LaserTeleportableP1@O-LaserTeleportable]
+Graphic = G-LaserTeleportableP1
+Body = B-LaserTeleportableP1
+ChildList = O-LaserTeleportableGunP1
+
+[G-LaserTeleportableP1@G-Projectile]
+Texture = SpaceShooterRedux/PNG/Lasers/laserBlue03.png
+
+[B-LaserTeleportableP1@B-Projectile]
+PartList = BP-LaserTeleportableP1
+
+[BP-LaserTeleportableP1@BP-LaserTeleportable]
+SelfFlags = projectileP1
+CheckMask = geometry # pilotP2 # space
+
+															;LASER TELEPORTABLE P2
+
+[O-LaserTeleportableP2@O-LaserTeleportable]
+Graphic = G-LaserTeleportableP2
+Body = B-LaserTeleportableP2
+ChildList = O-LaserTeleportableGunP2
+
+[G-LaserTeleportableP2@G-Projectile]
+Texture = SpaceShooterRedux/PNG/Lasers/laserRed03.png
+
+[B-LaserTeleportableP2@B-Projectile]
+PartList = BP-LaserTeleportableP2
+
+[BP-LaserTeleportableP2@BP-LaserTeleportable]
+SelfFlags = projectileP2
+CheckMask = geometry # pilotP1 # space
+
 															;LASER GATE LASER NEAR P1
 
 [O-LaserGateLaserNearP1@O-LaserP1]
@@ -385,7 +432,6 @@ LifeTime = 10.0
 Pos = (0, 0)
 Depth = O-Missile
 FSpeed = 1000
-FiringDirection = (0, 0)
 
 [B-Missile@B-Projectile]
 
@@ -864,6 +910,7 @@ Type = box
 [O-MissileShieldP1@O-MissileShield]
 Graphic = G-MissileShieldP1
 Body = B-MissileShieldP1
+ChildList = O-MissileShieldGunP1
 
 [G-MissileShieldP1@G-Projectile]
 Texture = SpaceShooterRedux/PNG/Power-ups/powerupRed_shield.png
@@ -880,6 +927,7 @@ CheckMask = geometry # space # pilotP2
 [O-MissileShieldP2@O-MissileShield]
 Graphic = G-MissileShieldP2
 Body = B-MissileShieldP2
+ChildList = O-MissileShieldGunP2
 
 [G-MissileShieldP2@G-Projectile]
 Texture = SpaceShooterRedux/PNG/Power-ups/powerupBlue_shield.png
