--- a/data/config/Spawner.ini
+++ b/data/config/Spawner.ini
@@ -36,10 +36,10 @@ Object = O-LaserWallP2
 ActiveObject = 1
 
 [SP-Neutral3P1@SP-Neutral3]
-Object = O-LaserP1
+Object = O-LaserTeleportableP1
 
 [SP-Neutral3P2@SP-Neutral3]
-Object = O-LaserP2
+Object = O-LaserTeleportableP2
 															
 															;NEUTRAL 4
 															
@@ -201,10 +201,10 @@ Object = O-LaserP2
 ActiveObject = 3
 
 [SP-Downward2P1@SP-Downward2]
-Object = O-LaserP1
+Object = O-LaserTeleportableP1
 
 [SP-Downward2P2@SP-Downward2]
-Object = O-LaserP2
+Object = O-LaserTeleportableP2
 															
 															;DOWNWARD 3
 															
@@ -359,6 +359,41 @@ Object = O-TurretP1
 
 [SP-Super8P2@SP-Super8]
 Object = O-TurretP2
+
+															;MISSILE SHIELD
+															
+[SP-MissileShield@SP-Spawner]
+CleanOnDelete = false
+
+[SP-MissileShieldP1@SP-MissileShield]
+Object = O-MissileP1
+
+[SP-MissileShieldP2@SP-MissileShield]
+Object = O-MissileP2
+
+															;LASER TELEPORTABLE
+															
+[SP-LaserTeleportable@SP-Spawner]
+ActiveObject = 1
+CleanOnDelete = true
+
+[SP-LaserTeleportableP1@SP-LaserTeleportable]
+Object = O-LaserPortalEntranceP1
+
+[SP-LaserTeleportableP2@SP-LaserTeleportable]
+Object = O-LaserPortalEntranceP2
+
+															;LASER PORTAL ENTRANCE
+															
+[SP-LaserPortalEntrance@SP-Spawner]
+ActiveObject = 1
+CleanOnDelete = true
+
+[SP-LaserPortalEntranceP1@SP-LaserPortalEntrance]
+Object = O-LaserPortalExitP1
+
+[SP-LaserPortalEntranceP2@SP-LaserPortalEntrance]
+Object = O-LaserPortalExitP2
 
 															;SHRAPNEL
 
@@ -587,6 +622,39 @@ Position = (0.5, 0.0, 0.0)
 [O-SuperGun@O-Gun]
 Position = (0.0, 0.0, 0.0)
 
+															;MISSILE SHIELD GUN
+															
+[O-MissileShieldGun@O-Gun]
+Position = (0, 0)
+
+[O-MissileShieldGunP1@O-MissileShieldGun]
+Spawner = SP-MissileShieldP1
+
+[O-MissileShieldGunP2@O-MissileShieldGun]
+Spawner = SP-MissileShieldP2
+
+															;LASER TELEPORTABLE GUN
+															
+[O-LaserTeleportableGun@O-Gun]
+Position = (0, 0)
+
+[O-LaserTeleportableGunP1@O-LaserTeleportableGun]
+Spawner = SP-LaserTeleportableP1
+
+[O-LaserTeleportableGunP2@O-LaserTeleportableGun]
+Spawner = SP-LaserTeleportableP2
+
+															;LASER PORTAL ENTRANCE GUN
+															
+[O-LaserPortalEntranceGun@O-Gun]
+Position = (0, 0)
+
+[O-LaserPortalEntranceGunP1@O-LaserPortalEntranceGun]
+Spawner = SP-LaserPortalEntranceP1
+
+[O-LaserPortalEntranceGunP2@O-LaserPortalEntranceGun]
+Spawner = SP-LaserPortalEntranceP2
+
 															;GRENADE GUN
 
 [O-GrenadeGun@O-Spawner]
@@ -735,6 +803,7 @@ Spawner = SP-Super2P2
 															;NEUTRAL GUN 3 P1
 
 [O-NeutralGun3P1@O-NeutralGun]
+Position = (0.0, 0.5, 0.0)
 Spawner = SP-Neutral3P1
 
 															;UPWARD GUN 3 P1
@@ -755,6 +824,7 @@ Spawner = SP-Super3P1
 															;NEUTRAL GUN 3 P2
 
 [O-NeutralGun3P2@O-NeutralGun]
+Position = (0.0, 0.5, 0.0)
 Spawner = SP-Neutral3P2
 
 															;UPWARD GUN 3 P2
